Fix the spacing of the UX2 wikitoc options panel, on IE8

--- a/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
@@ -68,7 +68,7 @@
             }
 
             input[type="checkbox"] {
-                margin: 3px;
+                margin: 0 4px; // top/bottom margin kills the fun on IE
                 border: 2px;
             }
 
